# FR-android-dlib-opencv

./: .gitmodules  .travis.yml  README.md
FaceTracker/: import-summary.txt
FaceTracker/app/: CMakeLists.txt  build.gradle
FaceTracker/app/jni/: CMakeLists.txt  imageutils_jni.cc
FaceTracker/app/src/androidTest/java/com/google/android/gms/samples/vision/face/facetracker/: ExampleInstrumentedTest.java  VideoGMSTrackerTest.java
FaceTracker/app/src/androidTest/java/dlib/android/: FaceRecognizerTest.java
FaceTracker/app/src/androidTest/java/opencv/android/fdt/: DetectionBasedTrackerTest.java  VideoDetectionTrackerTest.java
FaceTracker/app/src/androidTest/java/org/opencv/android/facetracker/: HaarDetectorTest.java  VideoHaarDetectorTest.java
FaceTracker/app/src/main/: AndroidManifest.xml
FaceTracker/app/src/main/cpp/: DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h  OCV-native-lib.cpp  native-lib.cpp  sqlite_orm.h
FaceTracker/app/src/main/java/com/google/android/gms/samples/vision/face/facetracker/: CustomDetector.java  FaceGraphic.java  FaceTrackerActivity.java
FaceTracker/app/src/main/java/com/google/android/gms/samples/vision/face/facetracker/ui/camera/: CameraSourcePreview.java
FaceTracker/app/src/main/java/dlib/android/: FaceRecognizer.java
FaceTracker/app/src/main/java/opencv/android/fdt/: DetectionBasedTracker.java  FdActivity.java
FaceTracker/app/src/main/java/org/opencv/android/facetracker/: CameraPreview.java  HaarDetector.java  OpenCvActivity.java
FaceTracker/app/src/main/java/tensorflow/detector/spc/: CameraActivityMainALPReu.java  CameraActivityMainALPRus.java  CameraActivityMainFaces.java  CameraActivityMainSPC.java
FaceTracker/app/src/main/res/layout/: activity_camera.xml  activity_camera_ssdfaces.xml  activity_open_cv.xml  face_detect_surface_view.xml  main.xml
FaceTracker/app/src/main/res/layout-land/: main.xml
FaceTracker/gradle/wrapper/: gradle-wrapper.properties
FaceTracker/openCVLibrary340dev/: build.gradle
tools/: CMakeLists.txt  dumpdb.cpp  get_images.py  preprocessing.cpp  sqlite_orm.h
